avformat/mov: Use ff_configure_buffers_for_index()

Fixes Ticket2513
Fixes Ticket4432

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>